# LexStudent

./: .gitignore
.claude/: launch.json  settings.local.json
LexStudent-master/: .gitignore  DESIGN.md  QUIZ_CONTENT_GUIDE.md  README.md  package.json  property_law_1.js  start-services.bat
LexStudent-master/client/: index.html  package-lock.json  package.json
LexStudent-master/client/src/: App.jsx
LexStudent-master/desktop/: index.html  package-lock.json  package.json  vite.config.ts
LexStudent-master/desktop/sidecar/: llm_engine.py  main.py  model_manager.py  notes_generator.py  rag.py  requirements.txt  transcriber.py
LexStudent-master/desktop/src/: App.tsx  index.css
LexStudent-master/desktop/src-tauri/: Cargo.toml  entitlements.plist  gen_icons.py  tauri.conf.json
LexStudent-master/desktop/src-tauri/capabilities/: default.json
LexStudent-master/desktop/src-tauri/icons/: icon.icns
LexStudent-master/desktop/src-tauri/src/: audio.rs  commands.rs  db.rs  lib.rs  main.rs
LexStudent-master/mobile/: .env.example  capacitor.config.json  index.html  package-lock.json  package.json  tailwind.config.js
LexStudent-master/mobile/src/: App.jsx  index.css
LexStudent-master/server/: db.js  index.js  schema.sql  seed.js
LexStudent-master/supabase/: SETUP.md  config.toml
LexStudent-master/web/: package-lock.json  package.json
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css
server/: index.js  schema.sql
server/routes/: badges.js  cases.js  courses.js  goals.js  progress.js  reminders.js  summaries.js
(+261 files in other folders)
