[package]
name = "lexstudent-desktop"
version = "0.1.0"
description = "LexStudent Desktop - A native law study companion"
authors = ["you"]
edition = "2021"

[lib]
name = "lexstudent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
