[package]
name = "lexscholar-desktop"
version = "0.1.0"
description = "LexScholar Desktop - AI-powered law study companion with live lecture transcription"
authors = ["you"]
edition = "2021"

[lib]
name = "lexscholar_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
portpicker = "0.1"
base64 = "0.22"
cpal = "0.15"
rubato = "0.15"
hound = "3.5"
rand = "0.8"
